tests/hole_fn_name_bad.stderr
tests/hole_fn_name_bad.sl:2:4: error: SL2007: identifier '_' is reserved
