tests/hole_fn_name_bad.sl
// Verifies hole function name is rejected.
fn _() {
}
